# ScopeRadarQmlPlugin

./: AppRadar.qml  CMakeLists.txt  FloatingComboBox.qml  README.md  ScopRadar.qml  SettingPanel.qml  SkyView.qml  TexfildeItem.qml  Theme.qml  qmldir  radarcontroller.cpp  radarcontroller.h  radarproperty.cpp  radarproperty.h  radartargetmodel.cpp  radartargetmodel.h
example/: example.cpp  example.qml
